# isiteaster

./: .dockerignore  .gitignore  Dockerfile  README.md  babel.cfg  config.py  pyproject.toml  requirements.txt
app/: __init__.py
app/routes/: favicon.py  index.py
app/templates/: 404.j2  500.j2  base.j2  index.j2
app/templates/partials/: footer.j2  head.j2
app/translations/nl/LC_MESSAGES/: messages.po
app/utils/: easter.py  locale.py  tz.py
docker/: Dockerfile  isiteaster.conf
isiteaster/routes/: bunny_picture.py  favicon.py  index.py
isiteaster/routes/error/: e404.py  e500.py
isiteaster/templates/: 500.j2  base.j2  index.j2
isiteaster/templates/partials/: head.j2
isiteaster/translations/nl/LC_MESSAGES/: messages.po
isiteaster/utils/: crawler_detect.py  easter.py  locale.py  tz.py
